// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The editor toolbar Matches the current snapshot if not previewing 1`] = `
<styled.div
  id="editor-toolbar"
>
  <styled.ul>
    <styled.li>
      <Button
        disabled={false}
        id="btn-preview"
        onClick={[Function]}
      >
        Preview
      </Button>
    </styled.li>
    <styled.li>
      <Button
        disabled={false}
        id="btn-reset"
        onClick={[Function]}
      >
        Reset
      </Button>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`The editor toolbar Matches the current snapshot if previewing 1`] = `
<styled.div
  id="editor-toolbar"
>
  <styled.ul>
    <styled.li>
      <Button
        disabled={false}
        id="btn-edit"
        onClick={[Function]}
      >
        Edit
      </Button>
    </styled.li>
  </styled.ul>
</styled.div>
`;
